# research_data_drl

./: .gitattribute  .gitignore  categorical_binary.prof  categorical_binary.stats  dvc.yaml  evaluate.prof  evaluate_drl.prof  label.txt  mlartifacts.dvc  mlruns.dvc  params.yaml  pyproject.toml  test.py  train.prof  train_drl.prof
.dvc/: config
.githooks/: commit-msg  pre-commit
data/: .gitignore  CICIDS2017_improved.dvc
data/train/: .gitignore
evaluate/: evaluate_confusion_matrix.csv
lib/: __init__.py  pyproject.toml
lib/src/: classifier.py  gan.py  network.py  network_v2.py  plot.py  utils.py  vae_gan.py
lib/src/vae_gan/: config.py
log/: .gitignore
model/: .gitignore
nb/: cgan.ipynb  cgan.py  feature_names.csv  vae.ipynb  vae.py
scripts/: bump_version.py  dvc_queue.sh  dvc_run.sh  install_hooks.sh
src/: build_dataset.py  categorical_binary.py  evaluate.py  evaluate_drl.py  generate_data.py  train.py  train_drl.py
train/: metrics.csv  metrics_drl.csv
