[project]
name = "research-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.4.0",
    "myself>=0.1",
    "flow-package"
]

[tool.uv.sources]
myself = { path = "lib" }
flow-package = { git = "https://github.com/Perpetuactivity/flow_package.git", branch = "upgrade" }

