[project]
name = "research-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.4.0",
    "myself>=0.1",
    "flow-package",
    "torch>=2.8.0",
    "ipykernel>=6.30.1",
    "torchvision>=0.23.0",
]

[tool.uv.sources]
flow-package = { git = "https://github.com/Perpetuactivity/flow_package.git", branch = "upgrade" }
myself = { workspace = true }

[tool.uv.workspace]
members = [
    "lib",
]

