[project]
name = "research-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.4.0",
    "myself>=0.1",
    "flow-package",
    "torch>=2.8.0",
    "ipykernel>=6.30.1",
    "torchvision>=0.23.0",
    "azure-ai-ml>=1.29.0",
    "azure-identity>=1.25.1",
    "azureml-core>=1.60.0.post1",
    "azureml-mlflow>=1.60.0",
    "dagshub>=0.6.3",
    "nvidia-ml-py>=13.580.82",
]

[tool.uv.sources]
myself = { workspace = true }
flow-package = { git = "https://github.com/Perpetuactivity/flow_package.git", branch = "upgrade" }

[tool.uv.workspace]
members = [
    "lib",
]

