[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myself"
version = "0.0.13"
description = "local helper library"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "scikit-learn<1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
